# rspeed

./: .gitignore  .repo-context.yaml  AGENTS.md  Cargo.toml  KNOWN_LIMITATIONS.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
decisions/: DEC-001-tokio-feature-set.md  DEC-002-http-client.md  DEC-003-backend-abstraction.md  DEC-004-latency-strategy.md  DEC-005-buffer-strategy.md  DEC-006-output-formats.md  DEC-007-release-tooling.md  DEC-008-deferred-tui.md  README.md
guidance/: constraints.yaml  questions.yaml
projects/PROJ-001-mvp/: brief.md
projects/PROJ-001-mvp/specs/: SPEC-001-adrs-timeline.md  SPEC-001-adrs.md  SPEC-002-cargo-skeleton-timeline.md  SPEC-002-cargo-skeleton.md  SPEC-003-ci-matrix-timeline.md  SPEC-003-ci-matrix.md  SPEC-004-cli-surface-timeline.md  SPEC-004-cli-surface.md  SPEC-005-backend-trait-timeline.md  SPEC-005-backend-trait.md  SPEC-006-test-harness-timeline.md  SPEC-006-test-harness.md  SPEC-007-metrics-accumulator-timeline.md  SPEC-007-metrics-accumulator.md  SPEC-008-latency-probe-timeline.md  SPEC-008-latency-probe.md  SPEC-009-buffer-pool.md  SPEC-010-cloudflare-throughput.md  SPEC-011-generic-throughput.md  SPEC-012-orchestrator-json-timeline.md  SPEC-012-orchestrator-json.md  SPEC-013-failure-modes-timeline.md  SPEC-013-failure-modes.md
projects/PROJ-001-mvp/specs/done/: SPEC-001-adrs-timeline.md  SPEC-001-adrs.md  SPEC-002-cargo-skeleton-timeline.md  (+18 more)
projects/PROJ-001-mvp/stages/: STAGE-001-foundation.md  STAGE-002-measurement-core.md  STAGE-003-output-ux.md  STAGE-004-cross-platform-perf.md  STAGE-005-release.md
projects/_templates/: spec.md
reports/daily/: 2026-04-25-status.md  2026-04-26-status.md  2026-05-03.md
scripts/: archive-spec.sh  backlog.sh  record-cost.py  session-cost.py
src/: buffer_pool.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  orchestrator.rs  result.rs
src/backend/: cloudflare.rs  generic.rs  latency.rs  mod.rs  select.rs  throughput.rs
tests/: buffer_pool.rs  cli.rs  failure_modes.rs  generic_backend.rs  latency.rs  metrics.rs  orchestrator.rs  smoke.rs  throughput.rs  version.rs
tests/common/: mod.rs
tests/snapshots/: cli__snapshot_custom_server_no_upload.snap  cli__snapshot_default_config.snap  cli__snapshot_help.snap  cli__snapshot_json_format_with_duration.snap  cli__snapshot_version.snap
(+3 files in other folders)
