[package]
name = "rspeed"
version = "0.0.1"
edition = "2024"
rust-version = "1.91.0"
description = "A fast Rust CLI speedtest tool. (placeholder; under active development)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jysf/rspeed"
readme = "README.md"
keywords = ["speedtest", "network", "cli", "bandwidth"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
