[package]
name = "rspeed"
version = "0.0.1"
edition = "2024"
rust-version = "1.91.0"
description = "A fast Rust CLI speedtest tool. (placeholder; under active development)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jysf/rspeed"
readme = "README.md"
keywords = ["speedtest", "network", "cli", "bandwidth"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"
clap   = { version = "4", features = ["derive"] }
url    = "2"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread", "net", "time", "macros", "io-util", "sync"
] }    # per DEC-001
reqwest = { version = "0.13", default-features = false, features = [
    "rustls", "stream", "http2"
] }    # per DEC-002 (post-cascade refinement)
bytes        = "1"
futures      = "0.3"
thiserror    = "2"
async-trait  = "0.1"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
insta       = "1"
axum        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used  = "warn"
expect_used  = "warn"
panic        = "warn"
unreachable  = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
